@@ -134,7 +134,7 @@
 	                        <aligny>center</aligny>
 	                        <font>thumbTitle</font>
 	                        <textcolor>textActive</textcolor>
-	                        <label>[B]$INFO[ListItem.Title][/B][CR][COLOR textDisabled]$INFO[ListItem.Season,$LOCALIZE[31011] , ]$INFO[ListItem.Episode,$LOCALIZE[31204] ,][/COLOR]</label>
+	                        <label>[B]$INFO[ListItem.Title][/B][CR]$INFO[ListItem.Season,$LOCALIZE[31011] , ]$INFO[ListItem.Episode,$LOCALIZE[31204] ,]</label>
 	                    </control>
 	      				<control type="progress">
 							<visible>ListItem.IsResumable</visible>
@@ -193,7 +193,7 @@
 		                        <aligny>center</aligny>
 		                        <font>thumbTitle</font>
 		                        <textcolor>textActive</textcolor>
-		                        <label>[B]$INFO[ListItem.Title][/B][CR][COLOR textDisabled]$INFO[ListItem.Season,$LOCALIZE[31011] , ]$INFO[ListItem.Episode,$LOCALIZE[31204] ,][/COLOR]</label>
+		                        <label>[B]$INFO[ListItem.Title][/B][CR]$INFO[ListItem.Season,$LOCALIZE[31011] , ]$INFO[ListItem.Episode,$LOCALIZE[31204] ,]</label>
 		                    </control>
 		      				<control type="progress">
 								<visible>ListItem.IsResumable</visible>
@@ -293,7 +293,7 @@
 						<height>1-row</height>
 						<aligny>center</aligny>
 						<font>thumbTitle</font>
-						<textcolor>textDisabled</textcolor>
+						<textcolor>textActive</textcolor>
 						<label>$INFO[ListItem.Property(TotalEpisodes),, $LOCALIZE[31189]]</label>
 					</control>
 					<control type="label">
@@ -384,7 +384,7 @@
 							<height>1-row</height>
 							<aligny>center</aligny>
 							<font>thumbTitle</font>
-							<textcolor>textDisabled</textcolor>
+							<textcolor>textActive</textcolor>
 							<label>$INFO[ListItem.Property(TotalEpisodes),, $LOCALIZE[31189]]</label>
 						</control>
 						<control type="label">
